deploy/code-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-service
  namespace: structexam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: code-service
  template:
    metadata:
      labels:
        app: code-service
    spec:
      containers:
      - name: code-service
        image: structexam-code-service:latest
        ports:
        - containerPort: 8083
