deploy/exam-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-service
  namespace: structexam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exam-service
  template:
    metadata:
      labels:
        app: exam-service
    spec:
      containers:
      - name: exam-service
        image: structexam-exam-service:latest
        ports:
        - containerPort: 8082
