deploy/nacos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: structexam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
      - name: nacos
        image: nacos/nacos-server:v2.2.3
        ports:
        - containerPort: 8848
        - containerPort: 9848
