deploy/micro-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: structexam
spec:
  selector:
    app: user-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: exam-service
  namespace: structexam
spec:
  selector:
    app: exam-service
  ports:
  - name: http
    port: 8082
    targetPort: 8082
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: code-service
  namespace: structexam
spec:
  selector:
    app: code-service
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  type: ClusterIP
