deploy/nacos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: structexam
spec:
  selector:
    app: nacos
  ports:
  - name: http
    port: 8848
    targetPort: 8848
  - name: grpc
    port: 9848
    targetPort: 9848
